Fix export modal z-index

--- a/src/components/Export/ExportComponent.css
+++ b/src/components/Export/ExportComponent.css
@@ -9,4 +9,5 @@
     background-color: white;
     overflow: scroll;
     font-size: .9rem;
+    z-index: 1;
 }
